Created a very rough colour based blob tracker that tracks the buoy based on its Hue in HSV space.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT( RoBoardControl )
 
 INCLUDE( FindPkgConfig )
 INCLUDE( ${PROJECT_SOURCE_DIR}/cmake/utils.cmake )
+INCLUDE( ${PROJECT_SOURCE_DIR}/cmake/python.cmake )
 
 INIT_LISTS()
 RESET_LISTS()
