--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,9 @@ LIST_TO_STRING( ROBOARDCONTROL_CFLAGS "${global_cflags}" )
 SET_SOURCE_FILES_PROPERTIES( ${global_sources} 
     PROPERTIES COMPILE_FLAGS "${ROBOARDCONTROL_CFLAGS} ${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE}}" )
 
+ADD_SUBDIRECTORY( ColourTracker )
+ADD_SUBDIRECTORY( PythonInterface )
+
 IF ( CMAKE_LINK_FLAGS_${CMAKE_BUILD_TYPE} )
   SET_SOURCE_FILES_PROPERTIES(${global_sources} PROPERTIES LINK_FLAGS 
     ${CMAKE_LINK_FLAGS_${CMAKE_BUILD_TYPE}})
