--- a/upstart/UweSubControl.conf
+++ b/upstart/UweSubControl.conf
@@ -7,4 +7,4 @@ env LD_LIBRARY_PATH=/home/uwesub/dev/install/lib:${LD_LIBRARY_PATH}
 env PATH=${PATH}:/home/uwesub/dev/install/bin
 env PYTHONPATH=${PKG_CONFIG_PATH}:/home/uwesub/dev/install/lib/python2.6/site-packages
 
-exec /home/uwesub/dev/uwe/RoBoardControl/scripts/SubController.py
+exec /home/uwesub/dev/uwe/RoBoardControl/scripts/SubController.py >> /home/uwesub/Controller.log
