Modified the control program so that the submarine will drive to the buoy in the simulator

--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -5,10 +5,14 @@
     playerServerAddress: localhost,
     playerServerPort: 6665,
 
-    trackedHue: 238.0,
-    maxAbsHueDiff: 6.0,
-    trackedSaturation: 29.0,
-    maxAbsSaturationDiff: 5.0,
-    trackedValue: 55.0,
-    maxAbsValueDiff: 15.0
+    trackedHue: 22.0,
+    maxAbsHueDiff: 8.0,
+    trackedSaturation: 70.0,
+    maxAbsSaturationDiff: 10.0,
+    trackedValue: 60.0,
+    maxAbsValueDiff: 20.0,
+
+    forwardSpeed: 1.0,
+    yawSpeed: 0.3,
+    screenRadiusOfCloseBuoy: 0.1
 }
