Created a Player plugin that provides a Position3D interface for controlling motors attached to the RoBoard

--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -12,6 +12,13 @@ driver
     size [320 240]
 )
 
+driver
+(
+    name "uwesub"
+    provides ["position3d:0"]
+    plugin "uwesubplugin"
+)
+
 
 
 
