Working towards using bundle adjustment to estimate the submarines trajectory

--- a/src/PythonInterface/CMakeLists.txt
+++ b/src/PythonInterface/CMakeLists.txt
@@ -3,7 +3,8 @@ IF ( ENABLE_PYTHON )
     INCLUDE_DIRECTORIES(
         .
         ${PYTHON_INCLUDE_PATH}
-        ${global_include_dirs} )
+        ${global_include_dirs}
+        ${PROJECT_SOURCE_DIR}/3rdParty/sba )
 
     SET( srcFiles 
         RoBoardControl.cpp )
@@ -11,7 +12,9 @@ IF ( ENABLE_PYTHON )
     SET_SOURCE_FILES_PROPERTIES( ${srcFiles} 
         PROPERTIES COMPILE_FLAGS "-pthread -fno-strict-aliasing -fwrapv -fPIC" )
 
-    LINK_DIRECTORIES( ${global_link_dirs} )
+    LINK_DIRECTORIES( 
+        ${global_link_dirs}
+        ${PROJECT_SOURCE_DIR}/3rdParty/sba )
     ADD_LIBRARY( PythonRoBoardControl SHARED ${srcFiles} )
     SET_TARGET_PROPERTIES( PythonRoBoardControl PROPERTIES OUTPUT_NAME "RoBoardControl" )
 
@@ -25,7 +28,12 @@ IF ( ENABLE_PYTHON )
 
     TARGET_LINK_LIBRARIES( PythonRoBoardControl 
         ColourTracker
-        ${global_link_libs} )
+        ${global_link_libs}
+        sba
+        lapack
+        blas
+        libf2c.a
+        m )
 
     INSTALL( TARGETS PythonRoBoardControl
         LIBRARY DESTINATION ${PYTHON_INSTDIR} )
