Reorganised the UweSubPlugin a bit so that we can start using threaded drivers. Also cleaned up the Python scripts a bit so that they all use the same configuration files

--- a/src/UweSubPlugin/CMakeLists.txt
+++ b/src/UweSubPlugin/CMakeLists.txt
@@ -9,9 +9,8 @@ INCLUDE_DIRECTORIES(
     ${PROJECT_SOURCE_DIR}/3rdParty/Roboard/Include )
 
 SET( srcFiles 
-    UweSubDriver.cpp
-    UweSubInterface.cpp
-    Position3DInterface.cpp )
+    UweSubPlugin.cpp
+    MotorDriver.cpp )
 
 LINK_DIRECTORIES( 
     ${global_link_dirs}
