(BROKEN) Trying to add in unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,16 +71,15 @@ ENDIF ( PKG_CONFIG_FOUND )
 
 #-------------------------------------------------------------------------------
 # Add in CxxTest unit tests
-#ENABLE_TESTING()
+ENABLE_TESTING()
 
 # Use Python interpreter
-#FIND_PACKAGE(PythonInterp)
+FIND_PACKAGE( PythonInterp )
 
-#SET(CXXTESTGEN /home/abroun/dev/extra/cxxtest/cxxtestgen.py)
-#
-#ADD_CXXTEST( unitTests 
-#            ${PROJECT_SOURCE_DIR}/unitTests/VectorTests.h
-#            ${PROJECT_SOURCE_DIR}/unitTests/MathUtilsTests.h )
+SET( CXXTESTGEN /home/abroun/dev/extra/cxxtest/cxxtestgen.py )
+
+ADD_CXXTEST( unitTests 
+            ${PROJECT_SOURCE_DIR}/unitTests/RollingBufferTests.h )
 
 #-------------------------------------------------------------------------------
 # Include the source files
