Finished the skeleton drivers for the Sonar and the Compass

--- a/src/UweSubPlugin/CMakeLists.txt
+++ b/src/UweSubPlugin/CMakeLists.txt
@@ -10,8 +10,10 @@ INCLUDE_DIRECTORIES(
 
 SET( srcFiles 
     UweSubPlugin.cpp
+    CompassDriver.cpp
     MotorDriver.cpp
-    SonarDriver.cpp )
+    SonarDriver.cpp
+    DataStructures/RollingBuffer.cpp )
 
 LINK_DIRECTORIES( 
     ${global_link_dirs}
