--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -16,10 +16,27 @@ driver
 (
     name "motordriver"
     provides ["position3d:0"]
+    #requires ["imu:0"]
     plugin "uwesubplugin"
 )
 
+#driver
+#(
+#    name "compassdriver"
+#    provides ["imu:0"]
+#    requires ["opaque:0"]
+#    buffer_size 10000
+#    plugin "uwesubplugin"
+#)
 
+# Serial communication for the compass
+#driver
+#(
+#    name "serialstream"
+#    provides ["opaque:0"]
+#    port "/dev/ttyUSB0"
+#    transfer_rate 57600
+#)
 
 
 
