More work on the Depth sensor driver. Also got the UweSub installation scripts to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,5 +93,21 @@ INCLUDE_DIRECTORIES(
 
 ADD_SUBDIRECTORY( src )
 
+# Install scripts
+INSTALL( FILES scripts/Utilities/UweSubInstall.py
+    DESTINATION bin 
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    RENAME UweSubInstall )
+INSTALL( FILES scripts/Utilities/UweSubActivateControl.py
+    DESTINATION bin 
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    RENAME UweSubActivateControl )
+INSTALL( FILES scripts/Utilities/UweSubKillControl.py
+    DESTINATION bin 
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    RENAME UweSubKillControl )
+INSTALL( FILES scripts/Utilities/sshConnection.py
+    DESTINATION ${PYTHON_INSTDIR} )
+
 MESSAGE( STATUS "Build Type: ${CMAKE_BUILD_TYPE}" )
 
