--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ SET_SOURCE_FILES_PROPERTIES( ${global_sources}
     PROPERTIES COMPILE_FLAGS "${ROBOARDCONTROL_CFLAGS} ${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE}}" )
 
 ADD_SUBDIRECTORY( ColourTracker )
+ADD_SUBDIRECTORY( Common )
 ADD_SUBDIRECTORY( PythonInterface )
 ADD_SUBDIRECTORY( UweSubPlugin )
 
