--- a/data/PlayerConfigs/SonarTest.cfg
+++ b/data/PlayerConfigs/SonarTest.cfg
@@ -6,7 +6,7 @@
 driver
 (
     name "sonardriver"
-    provides ["camera:0"]
+    provides ["camera:0" "speech:0" ]
     requires ["opaque:0"]
     buffer_size 10000
     plugin "uwesubplugin"
@@ -18,5 +18,5 @@ driver
     name "serialstream"
     provides ["opaque:0"]
     port "/dev/ttyUSB0"
-    transfer_rate 57600
+    transfer_rate 115200
 )
