latest source updates

--- a/data/PlayerConfigs/SonarTest.cfg
+++ b/data/PlayerConfigs/SonarTest.cfg
@@ -5,7 +5,7 @@
 # The sonar
 driver
 (
-    name "sonardriver"
+    name "SonarDriver"
     provides ["camera:0" "speech:0" ]
     requires ["opaque:0"]
     buffer_size 10000
