Hooked up sonar interface to George's work

--- a/data/PlayerConfigs/SonarTest.cfg
+++ b/data/PlayerConfigs/SonarTest.cfg
@@ -6,7 +6,7 @@
 driver
 (
     name "SonarDriver"
-    provides ["camera:0" "speech:0" ]
+    provides ["micronsonar:0" ]
     requires ["opaque:0"]
     buffer_size 10000
     plugin "uwesubplugin"
