--- a/data/PlayerConfigs/DepthSensorTest.cfg
+++ b/data/PlayerConfigs/DepthSensorTest.cfg
@@ -7,5 +7,16 @@ driver
 (
     name "depthsensordriver"
     provides ["position1d:0"]
+    requires ["opaque:0"]
+    buffer_size 10000
     plugin "uwesubplugin"
+)
+
+# Serial communication for the depth sensor
+driver
+(
+    name "serialstream"
+    provides ["opaque:0"]
+    port "/dev/ttyUSB0"
+    transfer_rate 57600
 )
