Got SonarDrivers to the point where they compile...

--- a/src/Common/CMakeLists.txt
+++ b/src/Common/CMakeLists.txt
@@ -9,7 +9,8 @@ INCLUDE_DIRECTORIES(
 
 SET( srcFiles 
     HighPrecisionTime.cpp 
-    Utils.cpp )
+    Utils.cpp
+    MathUtils.cpp )
 
 ADD_LIBRARY( common ${srcFiles} )
 
