Work on test programs for the submarine

--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -12,12 +12,40 @@ driver
     size [320 240]
 )
 
+# The submarine's other camera
+driver
+(
+    name "camerauvc"
+    provides ["camera:1"]
+    port "/dev/video1"
+    size [320 240]
+)
+
 driver
 (
     name "motordriver"
     provides ["position3d:0"]
     #requires ["imu:0"]
     plugin "uwesubplugin"
+)
+
+# The sonar
+driver
+(
+    name "SonarDriver"
+    provides ["micronsonar:0" ]
+    requires ["opaque:0"]
+    buffer_size 10000
+    plugin "uwesubplugin"
+)
+
+# Serial communication for the sonar
+driver
+(
+    name "serialstream"
+    provides ["opaque:0"]
+    port "/dev/ttyUSB0"
+    transfer_rate 115200
 )
 
 #driver
