Bug fixes and work on a Player driver for George's range finder hardware

--- a/src/UweSubPlugin/CMakeLists.txt
+++ b/src/UweSubPlugin/CMakeLists.txt
@@ -13,6 +13,7 @@ SET( srcFiles
     CompassDriver.cpp
     DepthSensorDriver.cpp
     MotorDriver.cpp
+    PingerDriver.cpp
     SonarDriver.cpp
     DataStructures/RollingBuffer.cpp
     DataStructures/Micron.cpp
