Changes to get compass working on real sub

--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -48,23 +48,24 @@ driver
     transfer_rate 115200
 )
 
-#driver
-#(
-#    name "compassdriver"
-#    provides ["imu:0"]
-#    requires ["opaque:0"]
-#    buffer_size 10000
-#    plugin "uwesubplugin"
-#)
+# The compass
+driver
+(
+    name "compassdriver"
+    provides ["imu:0"]
+    requires ["opaque:1"]
+    buffer_size 10000
+    plugin "uwesubplugin"
+)
 
 # Serial communication for the compass
-#driver
-#(
-#    name "serialstream"
-#    provides ["opaque:0"]
-#    port "/dev/ttyUSB0"
-#    transfer_rate 57600
-#)
+driver
+(
+    name "serialstream"
+    provides ["opaque:1"]
+    port "/dev/ttyS0"
+    transfer_rate 38400
+)
 
 
 
