compass angle 2*pi -

--- a/data/PlayerConfigs/PositionSim.cfg
+++ b/data/PlayerConfigs/PositionSim.cfg
@@ -7,7 +7,7 @@ driver
 (
     name "motordriver"
     provides ["position3d:0"]
-    requires ["imu:0"]
+    requires ["imu:0" "position1d:0"]
     plugin "uwesubplugin"
 )
 
@@ -15,7 +15,7 @@ driver
 driver
 (       
   name "subsim"
-  provides [ "simulation:0" "position3d:1" "camera:0" "imu:0" ]
+  provides [ "simulation:0" "position3d:1" "camera:0" "imu:0" "position1d:0" ]
   world "~/dev/uwe/SubSim/data/SauceWorld.xml"
   plugin "subsimplugin"
 )
