--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -67,5 +67,23 @@ driver
     transfer_rate 38400
 )
 
+# The depth sensor
+driver
+(
+    name "depthsensordriver"
+    provides ["position1d:0"]
+    requires ["opaque:2"]
+    buffer_size 10000
+    plugin "uwesubplugin"
+)
+
+# Serial communication for the depth sensor
+driver
+(
+    name "serialstream"
+    provides ["opaque:2"]
+    port "/dev/ttyUSB0"     # or usb1
+    transfer_rate 57600
+)
 
 
