ready for water test. compass and depth sensor connected.

--- a/data/PlayerConfigs/RealSub.cfg
+++ b/data/PlayerConfigs/RealSub.cfg
@@ -8,7 +8,7 @@ driver
 (
     name "camerauvc"
     provides ["camera:0"]
-    port "/dev/video0"
+    port "/dev/videoFront"
     size [320 240]
 )
 
@@ -17,7 +17,7 @@ driver
 (
     name "camerauvc"
     provides ["camera:1"]
-    port "/dev/video1"
+    port "/dev/videoBottom"
     size [320 240]
 )
 
@@ -44,7 +44,7 @@ driver
 (
     name "serialstream"
     provides ["opaque:0"]
-    port "/dev/ttyUSB0"
+    port "/dev/ttySonar"
     transfer_rate 115200
 )
 
@@ -82,7 +82,7 @@ driver
 (
     name "serialstream"
     provides ["opaque:2"]
-    port "/dev/ttyUSB0"     # or usb1
+    port "/dev/ttyDepthSensor"   
     transfer_rate 57600
 )
 
