--- a/data/PlayerConfigs/PingerTest.cfg
+++ b/data/PlayerConfigs/PingerTest.cfg
@@ -6,7 +6,7 @@
 driver
 (
     name "pingerdriver"
-    provides ["speech:0" ]
+    provides ["dspic:0" ]
     requires ["opaque:0"]
     buffer_size 10000
     plugin "uwesubplugin"
