A big splurge which includes 	- Work on the corner detector, started a C++ implementation 	- A logger object for creating log files 	- Control script base class along with a first pass at a script for completing the first mission 	- A sub controller which runs a control script

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ SET_SOURCE_FILES_PROPERTIES( ${global_sources}
 
 ADD_SUBDIRECTORY( ColourTracker )
 ADD_SUBDIRECTORY( Common )
+ADD_SUBDIRECTORY( CornerFinder )
 ADD_SUBDIRECTORY( PythonInterface )
 ADD_SUBDIRECTORY( UweSubPlugin )
 
