Got the first control script working in the simulator

--- a/data/PlayerConfigs/SubSim.cfg
+++ b/data/PlayerConfigs/SubSim.cfg
@@ -5,9 +5,9 @@
 
 # load the SubSim plugin simulation driver
 driver
-(		
+(       
   name "subsim"
-  provides [ "simulation:0" "position3d:0" "camera:0" "imu:0" ]
+  provides [ "simulation:0" "position3d:0" "camera:0" "imu:0" "position1d:0" ]
   world "~/dev/uwe/SubSim/data/SauceWorld.xml"
   plugin "subsimplugin"
 )
