--- a/data/PlayerConfigs/SubSim.cfg
+++ b/data/PlayerConfigs/SubSim.cfg
@@ -7,7 +7,7 @@
 driver
 (       
   name "subsim"
-  provides [ "simulation:0" "position3d:0" "camera:0" "imu:0" "position1d:0" ]
+  provides [ "simulation:0" "position3d:0" "camera:0" "imu:0" "position1d:0" "micronsonar:0" ]
   world "~/dev/uwe/SubSim/data/SauceWorld.xml"
   plugin "subsimplugin"
 )
