--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -14,5 +14,24 @@
 
     forwardSpeed: 0.5,
     yawSpeed: 0.3,
-    screenRadiusOfCloseBuoy: 0.15
+    screenRadiusOfCloseBuoy: 0.15,
+
+    # Control gains
+    pitchKp: 3.0,
+    pitchKi: 0.0,
+    pitchiMin: -1.57,
+    pitchiMax: 1.57,
+    pitchKd: 0.0,
+        
+    yawKp: -1.4,
+    yawKi: 0.0,
+    yawiMin: -1.57,
+    yawiMax: -1.57,
+    yawKd: 0.25,
+        
+    depthKp: 0.001,
+    depthKi: 0.0,
+    depthiMin: -1.57,
+    depthiMax: 1.57,
+    depthKd: 0.0
 }
