More work on QualifyingRun script. Added arbitrator gains and epsilons to config files

--- a/data/SubControllerConfigs/RealWorld.cfg
+++ b/data/SubControllerConfigs/RealWorld.cfg
@@ -16,6 +16,16 @@
     yawSpeed: 0.4,
     screenRadiusOfCloseBuoy: 0.1,
 
+    # Image Capture script
+    IC_Script_sonarScanStartAngleDegrees: 270.0,
+    IC_Script_sonarScanEndAngleDegrees: 90.0,
+    IC_Script_enableCamera: False,
+    IC_Script_enableSonar: False,
+
+    # Arbitrator epsilons
+    arbitratorDepthEpsilon: 10,
+    arbitratorYawEpsilonDegrees: 2.5,
+
     # Control gains
     pitchKp: 3.0,
     pitchKi: 0.0,
