--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -16,6 +16,16 @@
     yawSpeed: 0.3,
     screenRadiusOfCloseBuoy: 0.15,
 
+    # Image Capture script
+    IC_Script_sonarScanStartAngleDegrees: 270.0,
+    IC_Script_sonarScanEndAngleDegrees: 90.0,
+    IC_Script_enableCamera: False,
+    IC_Script_enableSonar: True,
+
+    # Arbitrator epsilons
+    arbitratorDepthEpsilon: 1,
+    arbitratorYawEpsilonDegrees: 2.5,
+
     # Control gains
     pitchKp: 3.0,
     pitchKi: 0.0,
