Work on the qualifying run script

--- a/data/SubControllerConfigs/SmallPoolRemote.cfg
+++ b/data/SubControllerConfigs/SmallPoolRemote.cfg
@@ -2,7 +2,7 @@
 {
     robotType: Real,
 
-    playerServerAddress: localhost,
+    playerServerAddress: 192.168.8.12,
     playerServerPort: 6665,
 
     trackedHue: 206.0,
@@ -44,13 +44,13 @@
     depthiMin: -1.57,
     depthiMax: 1.57,
     depthKd: 0.0,
-
+ 
     # Qualifying run script
-    QR_runDepth: 7480,
-    QR_forwardSpeed: -0.8,
-    QR_startDelayTime: 60.0,
-    QR_moveForwardTime: 240.0,
-    QR_headingToGateDegrees: 262.0,
+    QR_runDepth: 7460,
+    QR_forwardSpeed: 0.8,
+    QR_startDelayTime: 0.1*60.0,
+    QR_moveForwardTime: 20.0,
+    QR_headingToGateDegrees: 171.0,
     
     QR_useImageCapture: False
 }
