--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -43,5 +43,14 @@
     depthKi: 0.0,
     depthiMin: -1.57,
     depthiMax: 1.57,
-    depthKd: 0.0
+    depthKd: 0.0,
+
+    # Qualifying run script
+    QR_runDepth: 110,
+    QR_forwardSpeed: 0.7,
+    QR_startDelayTime: 6.0,
+    QR_moveForwardTime: 20.0,
+    QR_headingToGateDegrees: 263.0,
+    
+    QR_useImageCapture: False
 }
