More tweaks to give logs more time to save

--- a/data/SubControllerConfigs/RealWorld.cfg
+++ b/data/SubControllerConfigs/RealWorld.cfg
@@ -16,12 +16,6 @@
     yawSpeed: 0.4,
     screenRadiusOfCloseBuoy: 0.1,
 
-    # Image Capture script
-    IC_Script_sonarScanStartAngleDegrees: 270.0,
-    IC_Script_sonarScanEndAngleDegrees: 90.0,
-    IC_Script_enableCamera: False,
-    IC_Script_enableSonar: False,
-
     # Arbitrator epsilons
     arbitratorDepthEpsilon: 10,
     arbitratorYawEpsilonDegrees: 2.5,
@@ -52,5 +46,10 @@
     QR_moveForwardTime: 180.0,
     QR_headingToGateDegrees: 232.0,
     
-    QR_useImageCapture: False
+    # Image Capture script
+    IC_Script_sonarScanStartAngleDegrees: 270.0,
+    IC_Script_sonarScanEndAngleDegrees: 90.0,
+    QR_useImageCapture: False,
+    IC_Script_enableCamera: False,
+    IC_Script_enableSonar: False
 }
