--- a/data/SubControllerConfigs/SmallPool.cfg
+++ b/data/SubControllerConfigs/SmallPool.cfg
@@ -16,12 +16,6 @@
     yawSpeed: 0.4,
     screenRadiusOfCloseBuoy: 0.1,
 
-    # Image Capture script
-    IC_Script_sonarScanStartAngleDegrees: 270.0,
-    IC_Script_sonarScanEndAngleDegrees: 90.0,
-    IC_Script_enableCamera: False,
-    IC_Script_enableSonar: False,
-
     # Arbitrator epsilons
     arbitratorDepthEpsilon: 5,
     arbitratorYawEpsilonDegrees: 2.5,
@@ -46,11 +40,16 @@
     depthKd: 0.0,
  
     # Qualifying run script
-    QR_runDepth: 7455,
+    QR_runDepth: 7459,
     QR_forwardSpeed: -0.8,
     QR_startDelayTime: 6.0,
     QR_moveForwardTime: 20.0,
     QR_headingToGateDegrees: 171.0,
-    
-    QR_useImageCapture: False
+
+    # Image Capture script
+    IC_Script_sonarScanStartAngleDegrees: 270.0,
+    IC_Script_sonarScanEndAngleDegrees: 90.0,
+    QR_useImageCapture: False,
+    IC_Script_enableCamera: False,
+    IC_Script_enableSonar: False
 }
