Switched to Datalogger script and added test for a crashed depth sensor

--- a/data/SubControllerConfigs/RealWorld.cfg
+++ b/data/SubControllerConfigs/RealWorld.cfg
@@ -19,7 +19,7 @@
     # Image Capture script
     IC_Script_sonarScanStartAngleDegrees: 270.0,
     IC_Script_sonarScanEndAngleDegrees: 90.0,
-    IC_Script_enableCamera: False,
+    IC_Script_enableCamera: True,
     IC_Script_enableSonar: False,
 
     # Arbitrator epsilons
