First pass of script for attempting the SAUC-E course using dead reckoning

--- a/data/SubControllerConfigs/RealWorld.cfg
+++ b/data/SubControllerConfigs/RealWorld.cfg
@@ -45,11 +45,27 @@
     QR_startDelayTime: 20.0,
     QR_moveForwardTime: 180.0,
     QR_headingToGateDegrees: 232.0,
+
+    # Hail Mary script
+    HM_normalDepth: 7480,
+    HM_pipeSurveyDepth: 7580,
+    HM_forwardSpeed: -0.8,
+    HM_startDelayTime: 20.0,
+    HM_endDelayTime: 40.0,
+    HM_drivingThroughGate_1_Time: 45.0,
+    HM_surveyingPipeTime: 90.0,
+    HM_approachingWallTime: 80.0,
+    HM_surveyingWallTime: 180.0,
+    HM_maxHuntingBuoyTime: 600.0,
+    HM_northHeadingDegrees: 232.0,
+    HM_eastHeadingDegrees: 322.0,
+    HM_southHeadingDegrees: 52.0,
+    HM_westHeadingDegrees: 142.0,
     
     # Image Capture script
     IC_Script_sonarScanStartAngleDegrees: 180.0,
     IC_Script_sonarScanEndAngleDegrees: 175.0,
-    QR_useImageCapture: False,
+    useImageCapture: False,
     IC_Script_enableCamera: True,
     IC_Script_enableSonar: False
 }
