--- a/data/SubControllerConfigs/SmallPool.cfg
+++ b/data/SubControllerConfigs/SmallPool.cfg
@@ -46,10 +46,15 @@
     QR_moveForwardTime: 20.0,
     QR_headingToGateDegrees: 171.0,
 
+    # Bounce script
+    B_downDepth: 7459,
+    B_upDepth: 7459,
+    B_startDelayTime: 6.0,
+    
     # Image Capture script
     IC_Script_sonarScanStartAngleDegrees: 270.0,
     IC_Script_sonarScanEndAngleDegrees: 90.0,
-    QR_useImageCapture: False,
+    useImageCapture: False,
     IC_Script_enableCamera: False,
     IC_Script_enableSonar: False
 }
