--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -51,6 +51,27 @@
     QR_startDelayTime: 6.0,
     QR_moveForwardTime: 20.0,
     QR_headingToGateDegrees: 263.0,
+
+    # Bounce script
+    B_downDepth: 90,
+    B_upDepth: 120,
+    B_startDelayTime: 6.0,
+
+    # Hail Mary script
+    HM_normalDepth: 260.0,
+    HM_pipeSurveyDepth: 1760.0,
+    HM_forwardSpeed: 0.7,
+    HM_startDelayTime: 2.0,
+    HM_endDelayTime: 40.0,
+    HM_drivingThroughGate_1_Time: 10.0,
+    HM_surveyingPipeTime: 20.0,
+    HM_approachingWallTime: 20.0,
+    HM_surveyingWallTime: 20.0,
+    HM_maxHuntingBuoyTime: 60.0,
+    HM_northHeadingDegrees: 0.0,
+    HM_eastHeadingDegrees: 90.0,
+    HM_southHeadingDegrees: 180.0,
+    HM_westHeadingDegrees: 270.0,
     
-    QR_useImageCapture: False
+    useImageCapture: False
 }
