Hopeful work on the HailMary script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,10 @@ INSTALL( FILES scripts/Utilities/UweSubKillControl.py
     DESTINATION bin 
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
     RENAME UweSubKillControl )
+INSTALL( FILES scripts/Utilities/UweFormatSAUCELog.py
+    DESTINATION bin 
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    RENAME UweFormatSAUCELog )
 INSTALL( FILES scripts/Utilities/sshConnection.py
     DESTINATION ${PYTHON_INSTDIR} )
 
