--- a/data/SubControllerConfigs/RealWorld.cfg
+++ b/data/SubControllerConfigs/RealWorld.cfg
@@ -57,6 +57,7 @@
     HM_approachingWallTime: 80.0,
     HM_surveyingWallTime: 180.0,
     HM_maxHuntingBuoyTime: 600.0,
+    HM_returningToCentreTime: 60.0,
     HM_northHeadingDegrees: 232.0,
     HM_eastHeadingDegrees: 322.0,
     HM_southHeadingDegrees: 52.0,
