--- a/data/SubControllerConfigs/SubSim.cfg
+++ b/data/SubControllerConfigs/SubSim.cfg
@@ -67,7 +67,8 @@
     HM_surveyingPipeTime: 20.0,
     HM_approachingWallTime: 20.0,
     HM_surveyingWallTime: 20.0,
-    HM_maxHuntingBuoyTime: 60.0,
+    HM_maxHuntingBuoyTime: 10.0,
+    HM_returningToCentreTime: 20.0,
     HM_northHeadingDegrees: 0.0,
     HM_eastHeadingDegrees: 90.0,
     HM_southHeadingDegrees: 180.0,
