--- a/data/SubControllerConfigs/SmallPool.cfg
+++ b/data/SubControllerConfigs/SmallPool.cfg
@@ -51,6 +51,23 @@
     B_upDepth: 7459,
     B_startDelayTime: 6.0,
     
+    # Hail Mary script
+    HM_normalDepth: 7480,
+    HM_pipeSurveyDepth: 7580,
+    HM_forwardSpeed: -0.8,
+    HM_startDelayTime: 6.0,
+    HM_endDelayTime: 40.0,
+    HM_drivingThroughGate_1_Time: 8.0,
+    HM_surveyingPipeTime: 8.0,
+    HM_approachingWallTime: 3.0,
+    HM_surveyingWallTime: 40.0,
+    HM_maxHuntingBuoyTime: 30.0,
+    HM_returningToCentreTime: 9.0,
+    HM_northHeadingDegrees: 171.0,
+    HM_eastHeadingDegrees: 224.0,
+    HM_southHeadingDegrees: 306.0,
+    HM_westHeadingDegrees: 46.0,
+
     # Image Capture script
     IC_Script_sonarScanStartAngleDegrees: 270.0,
     IC_Script_sonarScanEndAngleDegrees: 90.0,
